OPC7/force-app/main/default/objects/Livraison__c/Livraison__c.object-meta.xml
<CustomObject>
    <label>Livraison</label>
    <nameField>
        <displayFormat>Livraison-{0000}</displayFormat>
        <label>Livraison Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Livraisons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>