OPC7/force-app/main/default/objects/Livraison__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Livraisons</relationshipLabel>
    <relationshipName>Livraisons</relationshipName>
    <type>Lookup</type>
</CustomField>