OPC7/force-app/main/default/objects/Livraison__c/fields/BillingAdress__c.field-meta.xml
<CustomField>
    <fullName>BillingAdress__c</fullName>
    <formula>Order__r.Adress__c</formula>
    <label>BillingAdress</label>
    <type>Text</type>
</CustomField>