OPC7/force-app/main/default/objects/Livraison__c/fields/Delai_de_Livraison__c.field-meta.xml
<CustomField>
    <fullName>Delai_de_Livraison__c</fullName>
    <formula>Prix__r.Delai_De_Livraison__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delai de Livraison</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>