OPC7/force-app/main/default/objects/Livraison__c/fields/Prix__c.field-meta.xml
<CustomField>
    <fullName>Prix__c</fullName>
    <label>Prix</label>
    <referenceTo>Prix__c</referenceTo>
    <relationshipLabel>Livraisons</relationshipLabel>
    <relationshipName>Livraisons</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>