OPC7/force-app/main/default/objects/Livraison__c/fields/ShippingAdress__c.field-meta.xml
<CustomField>
    <fullName>ShippingAdress__c</fullName>
    <formula>Order__r.Adress__c</formula>
    <label>ShippingAdress</label>
    <type>Text</type>
</CustomField>